--- a/desafios/desafio013/index.html
+++ b/desafios/desafio013/index.html
@@ -5,11 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projecto Redes Sociais</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <style>
-        
-    </style>
+    <link rel="stylesheet" href="estilos/base.css">
 </head>
 <body>
-    
+    <main>
+        <section id="iphone">
+            <iframe src="home.html" name="iphone" frameborder="0"></iframe>
+        </section>
+        <section>
+            <a href="home.html" target="iphone"><img src="imagens/logo-home.jpg" alt="logo home"></a> <br>
+
+            <a href="instagram.html" target="iphone"><img src="imagens/logo-instagram.jpg" alt="instagram"></a> <br>
+
+            <a href="facebook.html" target="iphone"><img src="imagens/logo-facebook.jpg" alt="facebook"></a> <br>
+
+            <a href="github.html" target="iphone"><img src="imagens/logo-github.jpg" alt="github"></a>
+
+            <a href="twitter.html" target="iphone"><img src="imagens/logo-twitter.jpg" alt="twitter"></a> <br>
+
+            <a href="youtube.html" target="iphone"><img src="imagens/logo-youtube.jpg" alt="youtube"></a>
+        </section>
+    </main>
 </body>
 </html>
