--- a/desafios/desafio013/home.html
+++ b/desafios/desafio013/home.html
@@ -17,33 +17,21 @@
 
         body{
             background-color: black;
-            position: absolute;
-        }
-
-        main{
-            width: 100vw;
-            height: 100vh;
-            position: absolute;
         }
 
         section{
-            position: relative;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -78%);
-            width: 300px;
-            height: 430px;
+            margin: auto;
+            max-width: 280px;
+            height: 499px;
             background: url(imagens/tela-home.jpg) no-repeat;
             background-size: cover;
-            background-position: top center;
+            background-attachment: fixed;
         }
     </style>
 </head>
 <body>
-    <main>
         <section>
 
         </section>
-    </main>
 </body>
 </html>
