--- a/exercícios/ex025/form.html
+++ b/exercícios/ex025/form.html
@@ -18,7 +18,8 @@
             <input type="text" name="nome" id="inome" autocomplete="name" required>
         </p>
         <p>
-            <label for="isobrenome">Sobrenome:</label> <input type="text" name="sobrenome" id="isobrenome" required minlength="5" autocomplete="cc-family-name">
+            <label for="isobrenome">Sobrenome:</label>
+            <input type="text" name="sobrenome" id="isobrenome" required minlength="5" autocomplete="cc-family-name">
         </p>
         <p>
             <input type="submit" value="Cadastrar">
