--- a/exercícios/ex025/form003.html
+++ b/exercícios/ex025/form003.html
@@ -13,6 +13,18 @@
             <input type="text" name="nome" id="nome" required autocomplete="name" placeholder="Nome completo">
         </p>
         <p>
+            <label for="media">Média:</label>
+            <input type="number" name="media" id="media" required min="0" max="20" step="0.5" placeholder="0 à 20">
+        </p>
+        <p>
+            <label for="mes">Período letivo:</label>
+            <input type="month" name="mes" id="mes" required value="2023-09">
+        </p>
+        <p>
+            <label for="dia">Dia e mês da prova:</label>
+            <input type="date" name="dia" id="dia">
+        </p>
+        <p>
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
         </p>
