--- a/exercícios/ex025/form003.html
+++ b/exercícios/ex025/form003.html
@@ -25,6 +25,10 @@
             <input type="date" name="dia" id="dia">
         </p>
         <p>
+            <label for="hora">Horário da prova:</label>
+            <input type="time" name="hora" id="hora">
+        </p>
+        <p>
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
         </p>
