aprendendo select, datalist e textarea

--- a/exercícios/ex025/form007.html
+++ b/exercícios/ex025/form007.html
@@ -8,7 +8,41 @@
 <body>
     <h1>Exemplo de Formulário</h1>
     <form action="cadastro.php" method="post">
-        
+        <p>
+            <label for="provs">Províncias</label>
+            <select name="provs" id="provs" required>
+                <option value="" selected>---Escolha---</option>
+                <optgroup label="Províncias consteiras">
+                    <option value="LA">Luanda</option>
+                    <option value="BL">Benguela</option>
+                    <option value="NB">Namibe</option>
+                    <option value="BN">Bengo</option>
+                    <option value="ZR">Zaire</option>
+                </optgroup>
+
+                <optgroup label="Províncias sulistas">
+                    <option value="CU">Cunene</option>
+                    <option value="CB">Cuando Cubango</option>
+                    <option value="HL">Huíla</option>
+                    <option value="BI">Bié</option>
+                    <option value="HM">Huambo</option>
+                </optgroup>
+            </select>
+        </p>
+        <p>
+            <label for="profis">Profissão</label>
+            <input type="text" name="profis" id="profis" list="prof" required>
+            <datalist id="prof">
+                <option value="ADM">Administrador</option>
+                <option value="CONT">Contabilista</option>
+                <option value="DEV">Desenvolvedor</option>
+                <option value="PROF">Professor</option>
+            </datalist>
+        </p>
+        <p>
+            <label for="msg">Mensagem</label> <br>
+            <textarea name="mensagem" id="msg" cols="30" rows="10" placeholder="Deixe aqui a sua mensagem"></textarea>
+        </p>
         <p>
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
