--- a/exercícios/ex025/formExtra.html
+++ b/exercícios/ex025/formExtra.html
@@ -9,7 +9,7 @@
     <form action="cadastro.php" method="post">
         <p>
             <label for="ifone">Telefone:</label>
-            <input type="tel" name="fone" id="ifone" required autocomplete="tel" placeholder="(xxx) xxx-xxx-xxx" pattern="\([0-9]{3}\)([\s])[0-9]{3}-[0-9]{3}-[0-9]{3}">
+            <input type="tel" name="fone" id="ifone" required autocomplete="tel" placeholder="(xxx) xxx-xxx-xxx" pattern="\([0-9]{3}\)([\s])[0-9]{3}-[0-9]{3}-[0-9]{3}" aria-describedby="Telefone aqui">
         </p>
         <p>
             <label for="modCel">Modelo do celular:</label>
