mais um projecto

--- a/exercícios/ex026/mq004/index.html
+++ b/exercícios/ex026/mq004/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
     <link rel="stylesheet" href="estilos/principal.css" media="all">
-    <link rel="stylesheet" href="estilos/tablet.css" media="screen and (min-width: 768px) and (max-width: 992)">
-    <link rel="stylesheet" href="estilos/pc.css" media="screen and (min-width: 992px) and (max-width: 1200px)">
+    <link rel="stylesheet" href="estilos/tablet.css" media="screen and (min-width: 600px)">
+    <link rel="stylesheet" href="estilos/pc.css" media="screen and (min-width: 992px)">
     <link rel="stylesheet" href="estilos/tv.css" media="screen and (min-width: 1200px)">
     <link rel="stylesheet" href="estilos/print.css" media="only print">
 </head>
