--- a/exercícios/ex026/mq006/index.html
+++ b/exercícios/ex026/mq006/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="estilos/geral.css" media="all">
     <link rel="stylesheet" href="estilos/restantes.css" media="screen and (min-width: 600px)">
 </head>
 <body>
     <header>
         <h1>Meu Site</h1>
-        <i class="material-icons">menu</i>
-        <menu>
+        <img id="men" src="menu.svg" alt="icon-menu" onclick="sho_hid()">
+        <menu id="burger">
             <ul>
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -32,5 +31,14 @@
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et ad dolores facilis! Et cum fugiat eaque eius provident veritatis, sequi est eveniet nisi. Esse est temporibus, eum quibusdam reiciendis nobis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet dignissimos et eligendi exercitationem alias? Impedit nobis neque vitae nam. Earum, sequi repellendus? Quisquam magnam porro deserunt harum neque iste suscipit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente enim iusto illum corrupti ad velit magni esse ullam architecto mollitia magnam, minus fuga nostrum maiores. Numquam eius incidunt maxime assumenda.</p>
             </article>
         </main>
+        <script>
+            function sho_hid(){
+                if(burger.style.display == 'none'){
+                    burger.style.display = 'block'
+                }else{
+                    burger.style.display = 'none'
+                }
+            }
+        </script>
 </body>
 </html>
