--- a/exercícios/ex026/mq006/index.html
+++ b/exercícios/ex026/mq006/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
     <link rel="stylesheet" href="estilos/geral.css" media="all">
     <link rel="stylesheet" href="estilos/restantes.css" media="screen and (min-width: 600px)">
 </head>
 <body>
     <header>
         <h1>Meu Site</h1>
-        <img id="men" src="menu.svg" alt="icon-menu" onclick="sho_hid()">
+        <span id="men" class="material-icons" onclick="sho_hid()">menu</span>
         <menu id="burger">
             <ul>
                 <li><a href="#">Opção 1</a></li>
