--- a/Anotações/css/Flexbox/exemplos com flex-blox/chainCity.html
+++ b/Anotações/css/Flexbox/exemplos com flex-blox/chainCity.html
@@ -65,6 +65,7 @@
 
         footer p{font-size: 0.8em;}
 
+
         @media only screen and (min-width: 768px){
             .container{
                 flex-direction: row;
@@ -73,6 +74,19 @@
             .direita,.esquerda{flex: 25%;
 }
             main{flex: 50%;}
+        }
+
+        @media only screen and (min-width: 600px) and (max-width: 768px){
+            .container{
+                flex-direction: row;
+                flex-wrap: wrap;
+            }
+
+            .esquerda{flex: 30%;}
+
+            main{flex: 70%;}
+
+            .direita{flex: 100%;}
         }
 
     </style>
